--- a/blog/introduction-to-nestjs-for-nodejs-developers.mdx
+++ b/blog/introduction-to-nestjs-for-nodejs-developers.mdx
@@ -362,3 +362,4 @@ Have fun. 🙂
 # Further Reading
 
 - [Setting up a Hybrid REST & GraphQL API with NestJS and MikroORM](https://jenyus.web.app/blog/2021-03-07-nestjs-starter)
+- [NestJS Documentation](https://docs.nestjs.com/)
